[workspace]
resolver = "2"
members = [
  "hello_compute",
  "hello_crossterm",
  "hello_customized_vec",
  "hello_grpc",
  "hello_permutation",
  "hello_self_response",
  "hello_world"
]

[workspace.dependencies]
bytemuck = "*"
tonic = "0.5"
tonic-build = "0.5"
tokio = { version = "1", features = ["full"] }
prost = "0.8.0"
wgpu = { version = "0.11.0", features = ["spirv"] }
