[workspace]
resolver = "2"
members = [
    "hello_channel",
    "hello_compute",
    "hello_crossterm",
    "hello_customized_vec",
    "hello_factorial",
    "hello_grpc",
    "hello_permutation",
    "hello_permutation_advanced",
    "hello_progress_bar",
    "hello_self_response",
    "hello_world",
    "hello_vulkan_on_ash",
]

[workspace.dependencies]
ash = { version = "0.38.0", default-features = false, features = [
    "linked",
    "debug",
    "std",
] }
bytemuck = "*"
tonic = "0.5"
tonic-build = "0.5"
tokio = { version = "1", features = ["full"] }
prost = "0.8.0"
wgpu = { version = "0.11.0", features = ["spirv"] }
