[package]
name = "hello_cui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "*", features = ["event-stream"] }
futures-util = { version = "0.3", features = [
    "std",
    "async-await",
], default-features = false }
tokio.workspace = true
futures-timer = "*"
