[package]
name = "hello_grpc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "grpc_client"
path = "client.rs"

[[bin]]
name = "grpc_server"
path = "server.rs"

[dependencies]
tonic.workspace = true
tokio.workspace = true
prost.workspace = true

[build-dependencies]
tonic-build.workspace = true
