[package]
name = "hello_vulkan_on_ash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash.workspace = true

[build-dependencies]
naga = { version = "0.19.0", features = ["glsl-in", "spv-out"] }
bytemuck = "*"
